--- a/kevinapp/src/main/resources/application.properties
+++ b/kevinapp/src/main/resources/application.properties
@@ -1,1 +1,8 @@
 spring.application.name=kevinapp
+
+management.endpoints.web.exposure.include=*
+management.info.env.enabled=true
+
+info.app.name=Kevin's web
+info.app.description=I'm Kevin, it's my first java spring boot web app.
+info.app.version=1.0.0
