Added spring security end points

--- a/kevinapp/src/main/resources/application.properties
+++ b/kevinapp/src/main/resources/application.properties
@@ -3,6 +3,14 @@ spring.application.name=kevinapp
 management.endpoints.web.exposure.include=*
 management.info.env.enabled=true
 
+# Exclude individual endpoints with a comma-delimited list
+management.endpoints.web.exposure.exclude=health,info
+
+
+
 info.app.name=Kevin's web
 info.app.description=I'm Kevin, it's my first java spring boot web app.
 info.app.version=1.0.0
+
+
+
