--- a/kevinapp/src/main/resources/application.properties
+++ b/kevinapp/src/main/resources/application.properties
@@ -7,10 +7,31 @@ management.info.env.enabled=true
 management.endpoints.web.exposure.exclude=health,info
 
 
-
 info.app.name=Kevin's web
 info.app.description=I'm Kevin, it's my first java spring boot web app.
 info.app.version=1.0.0
+
+
+# Define my crazy properties
+coach.name=Mickey Mouse
+team.name=The Mouse Club
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 
 
 
