--- a/kevinapp/src/main/resources/application.properties
+++ b/kevinapp/src/main/resources/application.properties
@@ -16,8 +16,12 @@ info.app.version=1.0.0
 coach.name=Mickey Mouse
 team.name=The Mouse Club
 
+# Change Spring Boot embedded server port
+server.port=7070
 
-
+# Set the context path of the application
+# All requests should be prefixed with /kevinapp
+server.servlet.context-path=/kevinapp
 
 
 
